[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/MusicPlayer.gd" type="Script" id=1]
[ext_resource path="res://assets/pause.png" type="Texture" id=2]
[ext_resource path="res://assets/play.png" type="Texture" id=3]
[ext_resource path="res://assets/seek_forward.png" type="Texture" id=4]
[ext_resource path="res://assets/seek_backward.png" type="Texture" id=5]
[ext_resource path="res://src/VolumeSlider.gd" type="Script" id=6]

[sub_resource type="Theme" id=1]

[node name="MusicPlayer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
margin_bottom = 5.0
theme = SubResource( 1 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 154.0
margin_right = -155.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 715.0
margin_bottom = 600.0
custom_constants/separation = 10
alignment = 1

[node name="SongInfoContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 715.0
margin_bottom = 117.0
size_flags_vertical = 0

[node name="NowPlayingLbl" type="Label" parent="MarginContainer/VBoxContainer/SongInfoContainer"]
margin_left = 319.0
margin_right = 396.0
margin_bottom = 14.0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Now Playing"

[node name="SongNameLbl" type="Label" parent="MarginContainer/VBoxContainer/SongInfoContainer"]
margin_top = 18.0
margin_right = 715.0
margin_bottom = 32.0
size_flags_vertical = 0
align = 1

[node name="MediaControlsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 127.0
margin_right = 715.0
margin_bottom = 434.0
size_flags_vertical = 0
alignment = 1

[node name="SeekBackwardsBtn" type="TextureButton" parent="MarginContainer/VBoxContainer/MediaControlsContainer"]
margin_top = 53.0
margin_right = 200.0
margin_bottom = 253.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 5 )

[node name="PausePlayBtn" type="TextureButton" parent="MarginContainer/VBoxContainer/MediaControlsContainer"]
margin_left = 204.0
margin_right = 511.0
margin_bottom = 307.0
size_flags_vertical = 0
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )

[node name="SeekFowardBtn" type="TextureButton" parent="MarginContainer/VBoxContainer/MediaControlsContainer"]
margin_left = 515.0
margin_top = 53.0
margin_right = 715.0
margin_bottom = 253.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 4 )

[node name="VolumeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_left = 333.0
margin_top = 444.0
margin_right = 382.0
margin_bottom = 458.0
size_flags_horizontal = 4
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
margin_top = 468.0
margin_right = 715.0
margin_bottom = 484.0
size_flags_horizontal = 5
max_value = 1.0
step = 0.05
script = ExtResource( 6 )

[node name="BackToMainMenuBtn" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 290.0
margin_top = 494.0
margin_right = 424.0
margin_bottom = 514.0
size_flags_horizontal = 4
text = "Back to Main Menu"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="MarginContainer/VBoxContainer/MediaControlsContainer/SeekBackwardsBtn" to="." method="_on_SeekBackwardsBtn_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/MediaControlsContainer/PausePlayBtn" to="." method="_on_PausePlayBtn_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MediaControlsContainer/SeekFowardBtn" to="." method="_on_SeekFowardBtn_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/VolumeSlider" to="MarginContainer/VBoxContainer/VolumeSlider" method="_on_VolumeSlider_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackToMainMenuBtn" to="." method="_on_BackToMainMenuBtn_pressed"]
